# whiteboard

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: canvas.hpp  editor.cpp  editor.hpp  main.cpp  modes.hpp  renderer.cpp  renderer.hpp  serialization.cpp  serialization.hpp  undo.hpp
